# skku-react-myapp

./: .eslintrc.js  .gitignore  .prettierrc.js  joongonara(naver_cafe)scraping.ipynb  package-lock.json  package.json
client/: .eslintignore  .eslintrc.js  .gitignore  .prettierrc  package-lock.json  package.json
client/src/: App.js  routes.js  store.js
client/src/layouts/: DefaultLayout.js
client/src/slices/: sidebarSlice.js
server/: .gitignore  manage.py  pyproject.toml
server/dashboard_server/: asgi.py  settings.py  urls.py  wsgi.py
server/joongonara/: apps.py
src/: App.js  index.js
src/components/: AddressBook.js  AddressItem.js  Blink.js  CaptionImage.js  Clink.js  HelloWorld.js
