[tool.poetry]
name = "django-react-dashboard"
version = "0.1.0"
description = ""
authors = ["BeTweak <ys@betweak.com>"]
readme = "README.md"
packages = [{include = "django_react_dashboard"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
django-dotenv = "^1.4.2"
django-filter = "^22.1"


[tool.poetry.group.dev.dependencies]
markdown = "^3.4.1"


[tool.poetry.group.docs.dependencies]
drf-spectacular = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
